# drifter

./: .gitignore  AGENTS.md  README.md  TASKS.md  conftest.py  constitution.md  drifter.toml  drifter.toml.example  schema.sql
.githooks/: pre-commit  pre-push
dashboard/: app.py
docs/: context-2026-04-04-auto-merge-deploy-scripts.md  context-2026-04-04-dashboard-build.md  context-2026-04-04-dashboard-comparison-and-merge.md  context-2026-04-04-dashboard-sse-fix.md  context-2026-04-04-harness-comparison-and-merge.md  context-2026-04-04-kernel-comparison.md  context-2026-04-04-merge-pipeline-push-readiness.md  context-2026-04-04-python-harness-build.md  context-2026-04-04-rust-kernel-build.md  context-2026-04-05-auto-merge-deploy-vps-stall.md  context-2026-04-05-hardening-and-one-shot-rewrite.md  context-2026-04-05-reject-loop-rejected-branches-self-awareness.md  context-2026-04-05-scheduler-system-notification-filtering.md  context-2026-04-05-sqlx-migration-inbox-ack.md  context-2026-04-06-auto-merge-remote-branch-cleanup.md  context-2026-04-06-autoagent-analysis-sovereignty-gate.md  context-2026-04-06-birth-flow-docs-and-local-env.md  context-2026-04-06-deploy-timeout-continuity.md  context-2026-04-06-gate-path-antipattern-check.md  context-2026-04-06-orphaned-agent-cleanup.md  context-2026-04-06-tensions-hash-dedup.md  context-2026-04-06-tensions-scheduler-trigger.md  prd.md  (+3 more)
rust/: Cargo.toml
rust/migrations/: 20240101000000_init.sql  20260404000001_add_working_dir.sql
rust/src/: birth.rs  bus.rs  gate.rs  inbox.rs  main.rs  notify.rs  paths.rs  policy.rs
(+45 files in other folders)
